--- a/frontend/src/components/FacultyVerify/FacultyVerify.css
+++ b/frontend/src/components/FacultyVerify/FacultyVerify.css
@@ -7,7 +7,6 @@
 }
 
 .faculty-verify-wrapper {
-  width: 90%;
   margin: 1em auto;
 }
 
