--- a/frontend/src/components/Verify/Verify.css
+++ b/frontend/src/components/Verify/Verify.css
@@ -1,5 +1,4 @@
 .verify-wrapper {
-  width: 90%;
   margin: 1em auto;
 }
 
@@ -7,15 +6,6 @@
   width: 100%;
   margin: 1em auto;
 }
-
-/* .verify-list-item {
-  width: 100%;
-  margin: 10px auto;
-  padding: 10px;
-  color: #1f1f1f;
-  background-color: #ccc;
-} */
-
 .verify-list-item {
   background: #ccc;
   color: #1f1f1f;
